# ThinkTank

./: .env.example  .gitignore  .pre-commit-config.yaml  STANDARDS.md  ThinkTank_Specification.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-layer/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  VERIFICATION.md
.planning/phases/02-job-queue-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  VERIFICATION.md
.planning/phases/03-content-ingestion-pipeline/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  VERIFICATION.md
.planning/phases/04-transcription-pipeline/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md  VERIFICATION.md
.planning/phases/05-llm-governance/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-RESEARCH.md  05-VALIDATION.md  VERIFICATION.md
.planning/phases/06-discovery-autonomous-growth/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-RESEARCH.md  06-VALIDATION.md  VERIFICATION.md
.planning/phases/07-operations-api-polish/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-RESEARCH.md  07-VALIDATION.md  VERIFICATION.md
.planning/phases/08-dashboard-and-system-configuration/: 08-01-PLAN.md  08-01-SUMMARY.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 002_add_partial_claim_index.py  003_add_pg_trgm_extension.py  004_sources_first_class.py  005_fk_ondelete.py  006_status_check_constraints.py  007_timezone_aware_timestamps.py  007a_tz_content_and_junctions.py  007b_tz_jobs_and_usage.py  007c_tz_remaining.py  008_renormalize_content_urls.py  009_index_hot_fks.py  010_content_source_guid.py  011_index_content_url.py  012_thinker_metrics_daily_unique.py  013_latest_pub_and_description.py  014_drop_deprecated_source_and_owner_cols.py  015_llm_review_token_split.py  016_candidate_vetting_columns.py  017_claims_layer.py  018_roster_critiques.py  92ce969b2ede_initial_schema.py  phase13_cataloged_index.py
docker/: Dockerfile.admin  Dockerfile.api  Dockerfile.worker-cpu  Dockerfile.worker-gpu  compose.mac-worker.yml
docs/: architecture.md  development-guide.md  operations-runbook.md
docs/plans/: 2026-07-13-dynamic-expert-standing.md  2026-07-13-web-lane-hardening.md  2026-07-14-openalex-fulltext-ingestion.md
scripts/: bootstrap.py  seed_categories.py  seed_config.py  seed_sources.py  seed_thinkers.py
scripts/mac-worker/: README.md  com.thinktank.local-inference.plist.template  install.sh  mac-worker.env.example
src/thinktank/: __init__.py  config.py  database.py  embeddings.py  http_utils.py  logging.py  secrets.py
tests/: conftest.py  factories.py
tests/contract/: __init__.py  conftest.py  test_adjudicator.py  test_admin_api_keys.py  test_api_config.py  test_api_content.py  test_api_jobs.py  test_api_openapi.py  test_api_sources.py  test_api_thinkers.py  test_critique_roster.py  test_discover_expert_sources.py  test_discovery_handlers.py  test_embed_content.py  test_enqueue_pending_transcriptions.py  test_expert_search.py  test_fetch_youtube_channel.py  test_handler_contracts.py  test_ingest_expert_papers.py  test_ingest_owned_text_source.py  test_ingestion_handlers.py  test_leader_lock.py  test_llm_approval_handler.py  test_recurring_scheduler.py  test_rollup_anthropic.py  test_rollup_handler.py  test_run_inquiry.py  test_scan_episodes_handler.py  test_scheduled_period_guards.py  test_transcription_handlers.py  test_vet_candidate.py  test_web_fetch.py
tests/data/: conftest.py  test_cascade_delete.py  test_claim_resolution.py  test_claims_schema.py  test_status_constraints.py  test_timezone_correctness.py
tests/integration/: conftest.py  test_admin_auth.py  test_admin_chat_api.py  test_admin_config.py  test_admin_csrf.py  test_admin_dashboard.py  test_admin_experts.py  test_admin_inquiries.py  test_admin_llm_panel.py  test_admin_pipeline.py  test_admin_query_counts.py  test_admin_scheduler.py  test_admin_source_detail.py  test_admin_sources.py  test_admin_status_rendering.py  test_admin_thinker_detail.py  test_admin_thinkers.py  test_backpressure.py  test_bootstrap.py  test_catalog_promote_flow.py  test_claim.py  test_content_dedup.py  test_discover_guests.py  test_discover_thinker.py  test_fetch_podcast.py  test_gpu_scaling.py  test_health.py  test_kill_switch.py  test_llm_approval.py  test_llm_escalation.py  test_llm_scheduled.py  test_migrations.py  test_models.py  test_process_content.py  test_rate_limit.py  test_reclaim.py  test_refresh_due.py  test_rollup_api_usage_commit.py  test_scan_candidates.py  test_secrets.py  (+3 more)
tests/unit/: test_admin_auth_principal.py  test_assemblyai.py  test_audio.py  test_backpressure.py  test_captions.py  test_chunker.py  test_claims_extraction.py  test_config.py  test_content_filter.py  test_discover_guests_uuid.py  test_discovery_handlers_unit.py  test_domain_fit.py  test_duration.py  test_errors.py  test_evidence_matching.py  test_exa_client.py  test_existing_transcript.py  test_expert_rubric.py  test_factories.py  test_feed_parser.py  test_fingerprint.py  test_fulltext.py  test_gpu_client.py  test_gpu_scaling_scheduler.py  test_gpu_worker_main.py  test_gpu_worker_model.py  test_http_utils.py  test_listennotes_client.py  test_llm_approval_handler.py  test_llm_client.py  test_llm_decisions.py  test_llm_escalation.py  test_llm_prompts.py  test_llm_schemas.py  test_llm_snapshots.py  test_llm_time_utils.py  test_local_inference.py  test_logging.py  test_name_extractor.py  test_name_matcher.py  (+17 more)
(+229 files in other folders)
