[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thinktank"
version = "0.1.0"
description = "Global intelligence ingestion platform for expert content"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg",
    "alembic>=1.17.2",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
    "feedparser>=6.0.12",
    "yt-dlp==2025.12.08",
    "webvtt-py>=0.5.1",
    "anthropic>=0.84.0",
    "google-api-python-client>=2.0",
    "sse-starlette>=2.0.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    "pre-commit",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.3.0",
    "pytest-rerunfailures>=14.0",
]
lint = [
    "ruff>=0.15.3",
    "mypy>=1.19.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]
ignore = [
    "B008",   # Allow Depends() in function defaults (standard FastAPI pattern)
    "TC001",  # Stylistic: don't require moving app imports to TYPE_CHECKING blocks
    "TC002",  # Stylistic: don't require moving third-party imports to TYPE_CHECKING blocks
    "TC003",  # Stylistic: don't require moving stdlib imports to TYPE_CHECKING blocks
    "SIM102", # Stylistic: allow nested ifs for readability
    "SIM105", # Stylistic: allow try/except/pass over contextlib.suppress
    "SIM108", # Stylistic: allow if/else blocks over ternary
    "SIM401", # Stylistic: allow if/else over dict.get with default
    "N806",   # Stylistic: allow UPPER_SNAKE in function-local constants
    "UP046",  # Stylistic: allow Generic base class syntax
]

[tool.ruff.lint.per-file-ignores]
"src/thinktank/agent/system_prompt.py" = ["E501"]  # Prompt templates contain long prose lines
"src/thinktank/admin/routers/pipeline.py" = ["E501"]  # Inline HTML/SQL strings

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
